--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	</section>
 	<!-- learn react end -->
 	<!-- Questions Accordion start -->
-	<section id="question" class="p-5">
+	<section id="questions" class="p-5">
 		<div class="container">
 			<h2 class="text-center mb-4">Frequently Asked Questions</h2>
 			<div class="accordion accordion-flush" id="Questions">
