--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
 </head>
 <body>
 	<!-- navbar start -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">Frontend Bootcamp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#learn">What You'll Learn</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#questions">Questions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#instructors">Instructors</a>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
+	<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+		<div class="container">
+			<a href="#" class="navbar-brand">Frontend Bootcamp</a>
+			<button class="navbar-toggler" type="button" 
+			data-bs-toggle="collapse"
+			 data-bs-target="#navmenu">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navmenu">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a href="#learn" class="nav-link">What You'll Learn</a>
+					</li>
+					<li class="nav-item">
+						<a href="#questions" class="nav-link">Questions</a>
+					</li>
+					<li class="nav-item">
+						<a href="#instructors" class="nav-link">Instructors</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	
 	<!-- navbar end -->
 	<!-- showcase start -->
